--- a/RECIPEBOOK/RECIPEBOOK.vcxproj.filters
+++ b/RECIPEBOOK/RECIPEBOOK.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="SearchEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NEWRECIPE.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GRAPHICS.h">
@@ -39,6 +42,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SearchEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NEWRECIPE.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RecipeCreator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
